# GovDocsTransition

./: README.md  pyproject.toml
govdocs/: analysis.py  cli.py  data-analysis.ipynb  govdoc_comparison-eres.ipynb  govdoc_comparison-print.ipynb  marc.py  temp.ipynb  utils.py
tests/: test-marc-eres-mono.mrk  test_marc.py
