[project]
name = "godocstransition"
version = "0.1.0"
description = "A set of scripts supporting transition of delivery of Government Documents records from MARCIVE to OCLC."
authors = [
    {name = "klinga",email = "klingaroo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "bookops-nypl-platform @ git+https://github.com/BookOps-CAT/bookops-nypl-platform.git",
    "jupyterlab (>=4.4.1,<5.0.0)",
    "pymarc (>=5.2.3,<6.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[project.scripts]
govdocs = "govdocs.cli:cli"

[tool.poetry]
packages = [{include = "govdocs"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 88
target-version = ["py312"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
